src/test/ui/deriving/deriving-enum-as-repr-bad.stderr
error[FIXME]: `AsRepr` can only be derived for enums
  --> $DIR/deriving-enum-as-repr-bad.rs:10:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[FIXME]: `AsRepr` can only be derived for enums with an explicit integer representation
  --> $DIR/deriving-enum-as-repr-bad.rs:14:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[FIXME]: `AsRepr` can only be derived for enums with an explicit integer representation
  --> $DIR/deriving-enum-as-repr-bad.rs:22:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[FIXME]: `AsRepr` can only be derived for data-free enums
  --> $DIR/deriving-enum-as-repr-bad.rs:29:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[FIXME]: `AsRepr` can only be derived for data-free enums
  --> $DIR/deriving-enum-as-repr-bad.rs:37:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[FIXME]: `AsRepr` can only be derived for data-free enums
  --> $DIR/deriving-enum-as-repr-bad.rs:45:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error[FIXME]: `AsRepr` can only be derived for data-free enums
  --> $DIR/deriving-enum-as-repr-bad.rs:53:10
   |
LL | #[derive(AsRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `AsRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 7 previous errors

